syntax = "proto3";

option go_package = "github.com/matthew-inamdar/dougdb/gen/grpc/doug";

message ErrorDetails {
  bool isLeader = 1;
  string leaderID = 2;
}

service Doug {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {}
